add swagger apis
